--- a/minigame.css
+++ b/minigame.css
@@ -1,8 +1,17 @@
 #ship {
     background-color: green;
     position: fixed;
-    width: 4%;
+    width: 50px;
     height: 90px;
     bottom: 30px;
-    left: 48%;
+    left: calc(50% - 25px);
+}
+
+@media screen and (max-device-width:1000px) {
+    div#ship {
+        width: 150px;
+        height: 270px;
+        bottom: 60px;
+        left: calc(50% - 75x);
+    }
 }
