--- a/minigame.css
+++ b/minigame.css
@@ -12,6 +12,6 @@
         width: 150px;
         height: 270px;
         bottom: 60px;
-        left: calc(50% - 75x);
+        left: calc(50% - 75px);
     }
 }
