--- a/minigame.css
+++ b/minigame.css
@@ -1,3 +1,7 @@
+body {
+    touch-action: manipulation;
+}
+
 #ship {
     background-color: green;
     position: fixed;
@@ -5,7 +9,6 @@
     height: 90px;
     bottom: 30px;
     left: calc(50% - 25px);
-    touch-action: manipulation;
 }
 
 @media screen and (max-device-width:1000px) {
