--- a/minigame.css
+++ b/minigame.css
@@ -1,5 +1,5 @@
 body {
-    touch-action: manipulation;
+    touch-action: none;
 }
 
 #ship {
@@ -8,7 +8,7 @@ body {
     width: 50px;
     height: 90px;
     bottom: 30px;
-    touch-action: manipulation;
+    touch-action: none;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -21,7 +21,7 @@ body {
     width: 20px;
     height: 60px;
     z-index: -2;
-    touch-action: manipulation;
+    touch-action: none;
 }
 
 .enemy {
@@ -29,7 +29,7 @@ body {
     background-color: blue;
     width: 70px;
     height: 70px;
-    touch-action: manipulation;
+    touch-action: none;
 }
 
 img[src="3lives.png"],
@@ -37,4 +37,5 @@ img[src="2lives.png"],
 img[src="1life.png"] {
     width: 35px;
     filter: drop-shadow(0px 0px 1px black) drop-shadow(0px 0px 1px black) drop-shadow(0px 0px 1px black) drop-shadow(0px 0px 1px black);
+    touch-action: none;
 }
