--- a/minigame.css
+++ b/minigame.css
@@ -38,4 +38,5 @@ img[src="1life.png"] {
     width: 35px;
     filter: drop-shadow(0px 0px 1px black) drop-shadow(0px 0px 1px black) drop-shadow(0px 0px 1px black) drop-shadow(0px 0px 1px black);
     touch-action: none;
+    pointer-events: none;
 }
