--- a/minigame.css
+++ b/minigame.css
@@ -1,5 +1,8 @@
 body {
     touch-action: none;
+    user-select: none;
+    -moz-user-select: none;
+    -webkit-user-select: none;
 }
 
 #ship {
@@ -12,6 +15,9 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+    user-select: none;
+    -moz-user-select: none;
+    -webkit-user-select: none;
 }
 
 .laser {
@@ -22,6 +28,9 @@ body {
     height: 60px;
     z-index: -2;
     touch-action: none;
+    user-select: none;
+    -moz-user-select: none;
+    -webkit-user-select: none;
 }
 
 .enemy {
@@ -30,6 +39,9 @@ body {
     width: 70px;
     height: 70px;
     touch-action: none;
+    user-select: none;
+    -moz-user-select: none;
+    -webkit-user-select: none;
 }
 
 img[src="3lives.png"],
@@ -39,4 +51,7 @@ img[src="1life.png"] {
     filter: drop-shadow(0px 0px 1px black) drop-shadow(0px 0px 1px black) drop-shadow(0px 0px 1px black) drop-shadow(0px 0px 1px black);
     touch-action: none;
     pointer-events: none;
+    user-select: none;
+    -moz-user-select: none;
+    -webkit-user-select: none;
 }
