--- a/minigame.css
+++ b/minigame.css
@@ -1,6 +1,7 @@
 body {
     touch-action: none;
     user-select: none;
+    pointer-events: none;
     -moz-user-select: none;
     -webkit-user-select: none;
 }
