--- a/minigame.css
+++ b/minigame.css
@@ -1,8 +1,10 @@
 body {
     touch-action: none;
     user-select: none;
+    -webkit-touch-callout: none;
     -moz-user-select: none;
     -webkit-user-select: none;
+    pointer-events: none;
 }
 
 #ship {
@@ -16,8 +18,10 @@ body {
     align-items: center;
     justify-content: center;
     user-select: none;
+    pointer-events: none;
     -moz-user-select: none;
     -webkit-user-select: none;
+    -webkit-touch-callout: none;
 }
 
 .laser {
@@ -54,4 +58,6 @@ img[src="1life.png"] {
     user-select: none;
     -moz-user-select: none;
     -webkit-user-select: none;
+    pointer-events: none;
+    -webkit-touch-callout: none;
 }
