--- a/minigame.css
+++ b/minigame.css
@@ -4,6 +4,7 @@ body {
     -webkit-touch-callout: none;
     -moz-user-select: none;
     -webkit-user-select: none;
+    pointer-events: none;
 }
 
 #ship {
