--- a/minigame.css
+++ b/minigame.css
@@ -5,7 +5,9 @@ body {
     -moz-user-select: none;
     -webkit-user-select: none;
     pointer-events: none;
-overflow:hidden
+overflow:hidden;
+width:100vw;
+height:100vh
 }
 
 #ship {
